# paystream

./: .env.example  .gitignore  AGENT_DEMO_TUTORIAL.md  CRONOS_MIGRATION.md  CRONOS_RPC_LIMIT_FIX.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_RESULTS.md  FRESH_DEPLOYMENT.md  FRONTEND_CONNECTION_TEST_REPORT.md  LICENSE  MANUAL_TESTING_REQUIRED.md  NETLIFY_DEPLOYMENT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  STREAM_DISPLAY_FIX.md  TASK_12.2_COMPLETION_SUMMARY.md  TASK_12_STATUS.md  TCRO_AGENT_DEMO_VERIFICATION.md  TESTING_SUMMARY.md  TEST_REPORT.md  hardhat.config.js  package-lock.json  package.json
agent-triggered-payment/: .env.example  .gitignore  Cargo.toml  README.md
agent-triggered-payment/src/: main.rs  payment_agent.rs  x402.rs
contracts/: FlowPayStream.sol  MockMNEE.sol  PayStreamStream.sol
demo/: check-setup.ts  consumer.ts  demo_script.md  provider.ts  tsconfig.json
demo/agent-demo/: CLIOutput.ts  DemoRunner.ts  PaymentAgent.ts  README.md  config.ts  index.ts  package-lock.json  (+4 more)
docs/: .gitbook.yaml  README.md  SUMMARY.md  architecture.md  book.json  contracts.md  deployment.md  getting-started.md
scripts/: check-deployment-readiness.js  deploy.js  test-stream-creation.js  validate-docs.js  verify-contract.js
sdk/: package-lock.json  package.json  tsconfig.json
server/: index.js  package-lock.json  package.json
src/: agent.rs  gemini.rs  main.rs  orchestrator.rs  x402.rs
test/: FlowPayStream.test.js  PayStreamStream.test.js
vite-project/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  test-frontend-connection.md
(+95 files in other folders)
